# hierarchical-marl-chip-placement

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  trained_placement_MemPool_tile.pt
configs/: env.yaml  gnn.yaml  rl.yaml  training.yaml
configs/rl_envs/: __init__.py  action_space.py  constraints.py  placement_env.py  reward.py  simulator.py  state.py
data/: preprocessing.py
data/datasets/: Makefile
data/preprocessed/real-connection/BlackParrot/Nangate45/: BlackParrot_Nangate45_graph.pt
data/preprocessed/real-connection/MemPool_group/Nangate45/: MemPool_group_Nangate45_graph.pt
data/preprocessed/real-connection/MemPool_tile/Nangate45/: MemPool_tile_Nangate45_graph.pt  metadata-MemPool_tile-Nangate45.json
data/preprocessed/real-connection/NVDLA/Nangate45/: NVDLA_Nangate45_graph.pt
data/preprocessed/real-connection/ariane133/Nangate45/: ariane133_Nangate45_graph.pt
data/preprocessed/real-connection/ariane136/Nangate45/: ariane136_Nangate45_graph.pt
scripts/: __init__.py  _common.py  benchmark_gnn.py  colab_training_script.ipynb  evaluate.py  hierarchical_marl_chip_placement.ipynb  inference.py  placement_benchmark.py  test_benchmark.py  train.py  train_gnn.py  visualize_layout.py
src/models/: macro_placement_env.py  ppa_evaluator.py
src/models/gnn/: __init__.py  encoder.py  layers.py  message_passing.py  rl_policy.py
src/rl/: __init__.py  buffer.py  evaluator.py  trainer.py
src/rl/algorithms/: __init__.py  a2c.py  dqn.py  ppo.py
src/tools/visualization/: data_visualizer.py  layout_visualizer.py
src/utils/: rl_placement_to_def_exporter.py
tools/visualization/: data_visualizer.py
(+11 files in other folders)
