[project]
name = "hierarchical-marl-chip-placement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "h5py>=3.16.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.8.0",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.1",
]
